gae-wiki 1.1

- Fixed issue 40: users now have custom nicknames, editable at /w/profile.
- Fixed escaping of URLs and emails in RSS.
- Spaces in URLs are now replaced with underscores.
- The /w/index.rss feed shows new pages first.


gae-wiki 1.0 (20110514)

- Moved the code to the gaewiki module.
- Unit testing added, run with "make test".
- Page parser supports different types of line ending.
- Custom pages for errors 400, 403, 404 and 500 (name them "gaewiki:error-400"
  and so on).
- Page property display_title can be used to override the main header.  Empty
  value hides the page header.
- Templates only use wiki_title when it's set.