@@ -4,6 +4,7 @@ gae-wiki 1.1
 - Fixed escaping of URLs and emails in RSS.
 - Spaces in URLs are now replaced with underscores.
 - The /w/index.rss feed shows new pages first.
+- Fixed absolute URLs in RSS, sitemap.xml and robots.txt.
 
 
 gae-wiki 1.0 (20110514)
